# Pride

./: .replit  bot.py  main.py  pyproject.toml  replit.md
bot/: __init__.py  bot.py  helpers.py
cogs/: giveaway.py  help.py  moderation.py  music.py  ticket.py  voicemaster.py
docs/: DESIGN_RULEBOOK.md  PROJECT_DOCUMENTATION.md
rivalapi/: __init__.py  rivalapi.py
